chore: 修改网站标题为 utop lab

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>生成前端代码</title>
+      <title>utop lab</title>
     </head>
 
     <body>
